--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       pm.map = new THREE.TextureLoader().load("texture2.png");
       pm.blending = THREE.AdditiveBlending;
       pm.transparent = true;
-      pm.size = 0.5;
+      pm.size = 1;
 
       //3) create the particle system
       var ps = new THREE.Points(cubeGeometry, pm);
@@ -105,7 +105,11 @@
 
       document.body.appendChild(renderer.domElement);
 
+      setUpSound();
+
       render();
+
+      loadSound("Hot-Summer-Nights-Love Club.ogg");
     }
 
     function render() {
@@ -113,39 +117,106 @@
       requestAnimationFrame(render);
 
       cameraControl.update();
+
+      updateCubes();
     }
 
-    context = new AudioContext();
+    function updateCubes() {
+      //get the average for the first channel
+      var array = new Uint8Array(analyser.frequencyBinCount);
+      analyser.getByteFrequencyData(array);
+      var average = getAverageVolume(array);
 
-    //set up analyser
-    analyser = context.createAnalyser();
-    analyser.smoothingTimeConstant = 0.4;
-    analyser.fftSize = 1024;
+      //get average for the second channel
+      var array2 = new Uint8Array(analyser2.frequencyBinCount);
+      analyser2.getByteFrequencyData(array2);
+      var average2 = getAverageVolume(array2);
 
-    //second channel analyser
-    analyser2 = context.createAnalyser();
-    analyser2.smoothingTimeConstant = 0.4;
-    analyser.fftSize = 1024;
+      //clear the current state
+      if (scene.getObjectByName("cube")) {
+        var cube = scene.getObjectByName("cube");
+        var cube2 = scene.getObjectByName("cube2");
+        cube.scale.y = average / 20;
+        cube2.scale.y = average2 / 20;
+      }
+    }
 
-    //create buffer source node
-    sourceNode = context.createBufferSource();
-    var splitter = context.createChannelSplitter();
+    function setUpSound() {
+      if (!window.AudioContext) {
+        if (!window.webkitAudioContext) {
+          alert("no audiocontext found");
+        }
+        window.AudioContext = window.webkitAudioContext;
+      }
+      context = new AudioContext();
 
-    //connect the source to the analyser and the splitter
-    sourceNode.connect(splitter);
+      //set up analyser
+      analyser = context.createAnalyser();
+      analyser.smoothingTimeConstant = 0.4;
+      analyser.fftSize = 1024;
 
-    //connect one of the outputs from the splitter to the analyser
-    splitter.connect(analyser, 0);
-    splitter.connect(analyser2, 1);
+      //second channel analyser
+      analyser2 = context.createAnalyser();
+      analyser2.smoothingTimeConstant = 0.4;
+      analyser.fftSize = 1024;
 
-    //connect to destination
-    sourceNode.connect(context.destination);
+      //create buffer source node
+      sourceNode = context.createBufferSource();
+      var splitter = context.createChannelSplitter();
 
-    context = new AudioContext();
+      //connect the source to the analyser and the splitter
+      sourceNode.connect(splitter);
+
+      //connect one of the outputs from the splitter to the analyser
+      splitter.connect(analyser, 0);
+      splitter.connect(analyser2, 1);
+
+      //connect to destination
+      sourceNode.connect(context.destination);
+
+      context = new AudioContext();
+    }
+
+    function getAverageVolume(array) {
+      var values = 0;
+      var average;
+
+      var length = array.length;
+
+      // get all the frequency amplitudes
+      for (var i = 0; i < length; i++) {
+        values += array[i];
+      }
+
+      average = values / length;
+      return average;
+    }
+
+    function playSound(buffer) {
+      sourceNode.buffer = buffer;
+      sourceNode.start(0);
+    }
 
     function loadSound(url) {
       var request = new XMLHttpRequest();
       request.open("GET", url, true);
+      request.responseType = "arraybuffer";
+
+      request.onload = function() {
+        //decode the data
+        context.decodeAudioData(
+          request.response,
+          function(buffer) {
+            playSound(buffer);
+          },
+          onError
+        );
+      };
+      request.send();
+    }
+
+    function onError(e) {
+      console.log(e);
     }
 
     function handleResize() {
